force-app/main/default/objects/Engagement__c/fields/Engagement_Financials_FIG_Closing__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Financials_FIG_Closing__c</fullName>
    <inlineHelpText>Roll-up to count if required Engagement Financials &quot;FIG&quot; has been entered</inlineHelpText>
    <label>Engagement Financials FIG Closing</label>
    <summaryFilterItems>
        <field>Engagement_Financials__c.FIG_Check_Closing__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Financials__c.Related_Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>