force-app/main/default/objects/Engagement__c/fields/Engagement_Financials_FIG_First__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Financials_FIG_First__c</fullName>
    <inlineHelpText>Roll-up to count if required &quot;First&quot; Engagement Financials for &quot;FIG&quot; has been entered.</inlineHelpText>
    <label>Engagement Financials FIG First</label>
    <summaryFilterItems>
        <field>Engagement_Financials__c.FIG_Check_First__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Financials__c.Related_Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>