force-app/main/default/objects/Engagement__c/fields/Engagement_Financials_First_Present__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Financials_First_Present__c</fullName>
    <inlineHelpText>Roll-up to count if required Engagement Financials &quot;First&quot; has been entered</inlineHelpText>
    <label>Engagement Financials First Present</label>
    <summaryFilterItems>
        <field>Engagement_Financials__c.EBITDA_LTM_MM__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Engagement_Financials__c.Revenue_LTM_MM__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Engagement_Financials__c.Type__c</field>
        <operation>equals</operation>
        <value>First</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Financials__c.Related_Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>