force-app/main/default/objects/Engagement__c/fields/Engagement_Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Invoice_Details__c</fullName>
    <formula>HYPERLINK(&quot;/00O5A000008GxWD?pv0=&quot;&amp;Full_Engagement_ID__c, &quot;Engagement Invoice Details&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Invoice Details</label>
    <type>Text</type>
</CustomField>