force-app/main/default/objects/Engagement__c/fields/Engagement_Letter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Letter_Criteria__c</fullName>
    <label>Engagement Letter Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fairness opinion or fairness opinion &amp; no broker-dealer activities</fullName>
            </value>
            <value>
                <fullName>Fairness opinion plus broker-dealer activities</fullName>
            </value>
            <value>
                <fullName>Not yet clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>