force-app/main/default/objects/Engagement__c/fields/Engagement_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Letter_Sent__c</fullName>
    <label>Engagement Letter Sent</label>
    <type>Date</type>
</CustomField>