force-app/main/default/objects/Engagement__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <inlineHelpText>Case Number</inlineHelpText>
    <label>Engagement Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>