force-app/main/default/objects/Engagement__c/fields/Engagement_Number_Processor__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number_Processor__c</fullName>
    <label>Engagement Number Processor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>