force-app/main/default/objects/Engagement__c/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <description>Business Unit, or Ledger, in ERP. Should come from Legal Entity.</description>
    <label>ERP Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>