force-app/main/default/objects/Engagement__c/fields/ERP_Business_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit_Id__c</fullName>
    <description>ERP Business Unit Id - values from Legal Entity records</description>
    <label>ERP Business Unit Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>