force-app/main/default/objects/Engagement__c/fields/ERP_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Entity_Code__c</fullName>
    <description>ERP Entity Code - Code from Legal Entity lookup value and populating value through Process builder</description>
    <label>ERP Entity Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>