force-app/main/default/objects/Engagement__c/fields/ERP_HL_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_HL_Entity__c</fullName>
    <formula>Legal_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP HL Entity</label>
    <type>Text</type>
</CustomField>