force-app/main/default/objects/Engagement__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <formula>Opportunity__r.ERP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP ID</label>
    <type>Text</type>
</CustomField>