force-app/main/default/objects/Engagement__c/fields/ERP_Industry_Group_Reporting__c.field-meta.xml
<CustomField>
    <fullName>ERP_Industry_Group_Reporting__c</fullName>
    <formula>CASE(TEXT(Industry_Group__c),
&apos;O&amp;G - Oil &amp; Gas&apos;, &apos;ONG&apos;,
&apos;TRANS - Transportation &amp; Logistics&apos;, &apos;TRA&apos;,
&apos;TECH - Technology&apos;, &apos;TEC&apos;,
IF(FIND(&quot; - &quot;,TEXT(Industry_Group__c)) &gt; 0,
LEFT(TEXT(Industry_Group__c), FIND(&quot; - &quot;,TEXT(Industry_Group__c) ) - 1),
TEXT(Industry_Group__c )))</formula>
    <label>ERP Industry Group (Reporting)</label>
    <type>Text</type>
</CustomField>