force-app/main/default/objects/Engagement__c/fields/ERP_Last_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Description__c</fullName>
    <description>Error from the last integration with ERP</description>
    <label>ERP Last Integration Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>