force-app/main/default/objects/Engagement__c/fields/ERP_Last_Integration_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Response_Date__c</fullName>
    <description>Most recent time the integration with ERP occured</description>
    <label>ERP Last Integration Response Date</label>
    <type>DateTime</type>
</CustomField>