force-app/main/default/objects/Engagement__c/fields/ERP_Last_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Status__c</fullName>
    <description>Status of the most recent integration with ERP</description>
    <label>ERP Last Integration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>