force-app/main/default/objects/Engagement__c/fields/ERP_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity__c</fullName>
    <formula>ERP_HL_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Legal Entity</label>
    <type>Text</type>
</CustomField>