force-app/main/default/objects/Engagement__c/fields/ERP_Legislation_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legislation_Code__c</fullName>
    <description>ERP Legislation Code  - It&apos;s a value from Legal Entity lookup value and populating value through Process builder</description>
    <label>ERP Legislation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>