force-app/main/default/objects/Engagement__c/fields/ERP_LOB__c.field-meta.xml
<CustomField>
    <fullName>ERP_LOB__c</fullName>
    <formula>IF(PIPELINE_Line_of_Business__c==&apos;FVA&apos;, &apos;FA&apos;, LEFT(PIPELINE_Line_of_Business__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP LOB</label>
    <type>Text</type>
</CustomField>