force-app/main/default/objects/Engagement__c/fields/ERP_Principal_Manager__c.field-meta.xml
<CustomField>
    <fullName>ERP_Principal_Manager__c</fullName>
    <description>Not used;</description>
    <label>ERP Principal Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>