force-app/main/default/objects/Engagement__c/fields/ERP_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Type__c</fullName>
    <description>Used, if Product Type cannot be used for reporting in ERP</description>
    <label>ERP Product Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>