force-app/main/default/objects/Engagement__c/fields/ERP_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Manager__c</fullName>
    <description>The staff id of the project manager in ERP.</description>
    <label>ERP Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>