force-app/main/default/objects/Engagement__c/fields/ERP_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Name__c</fullName>
    <formula>LEFT(Name, 40) &amp; &quot; &quot; &amp; &quot; &quot; &amp; Opportunity__r.ERP_Project_Number__c</formula>
    <label>ERP Project Name</label>
    <type>Text</type>
</CustomField>