force-app/main/default/objects/Engagement__c/fields/ERP_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Number__c</fullName>
    <formula>Opportunity__r.ERP_Project_Number__c</formula>
    <label>ERP Project Number</label>
    <type>Text</type>
</CustomField>