force-app/main/default/objects/Engagement__c/fields/ERP_Project_Principal__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Principal__c</fullName>
    <description>Not used</description>
    <label>ERP Project Principal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>