force-app/main/default/objects/Engagement__c/fields/ERP_Project_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Status_Code__c</fullName>
    <description>Set default Project Status to &apos;Engaged&apos; in Oracle.</description>
    <formula>&apos;300000002781084&apos; /* Project Status is set to &apos;Engaged&apos; in Oracle */</formula>
    <inlineHelpText>ERP Project Status in Oracle.</inlineHelpText>
    <label>ERP Project Status Code</label>
    <type>Text</type>
</CustomField>