force-app/main/default/objects/Engagement__c/fields/ERP_Revenue_Method__c.field-meta.xml
<CustomField>
    <fullName>ERP_Revenue_Method__c</fullName>
    <description>Not Used</description>
    <label>ERP Revenue Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>