force-app/main/default/objects/Engagement__c/fields/ERP_Submitted_To_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Submitted_To_Sync__c</fullName>
    <description>Date/Time when the outbound message is last generated</description>
    <label>ERP Submitted To Sync</label>
    <type>DateTime</type>
</CustomField>