force-app/main/default/objects/Engagement__c/fields/ERP_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Task_Name__c</fullName>
    <description>ICO Task Name; ICO-&lt;Legal Entity of Resource Provider&gt;</description>
    <label>ERP Task Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>