force-app/main/default/objects/Engagement__c/fields/ERP_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Task_Number__c</fullName>
    <description>Task Number for ICO Contract. ICO-&lt;Legal entity of resource Provider&gt;</description>
    <label>ERP Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>