force-app/main/default/objects/Engagement__c/fields/ERP_Template__c.field-meta.xml
<CustomField>
    <fullName>ERP_Template__c</fullName>
    <description>Project Template Code for the business unit in ERP</description>
    <label>ERP Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>