force-app/main/default/objects/Engagement__c/fields/ERP_Update_Attributes__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_Attributes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Used</description>
    <label>ERP Update Attributes</label>
    <type>Checkbox</type>
</CustomField>