force-app/main/default/objects/Engagement__c/fields/ERP_Update_DFF__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_DFF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the ERP DFF related fields (Primary Office, Industry Group, Sector, LOB, Job Type, Ownership, Product Line, etc.) are updated. OIC uses this info to decide to call the web service to update the DFF.</description>
    <inlineHelpText>True when the ERP DFF related fields (Primary Office, Industry Group, Sector, LOB, Job Type, Ownership, Product Line, etc.) are updated. OIC uses this info to decide to call the web service to update the DFF.</inlineHelpText>
    <label>ERP Update DFF</label>
    <type>Checkbox</type>
</CustomField>