force-app/main/default/objects/Engagement__c/fields/ERP_Update_New_Task__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_New_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate to create a task for ICO contract</description>
    <label>ERP Update New Task</label>
    <type>Checkbox</type>
</CustomField>