force-app/main/default/objects/Engagement__c/fields/Escrow_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Date__c</fullName>
    <label>Escrow Date</label>
    <type>Date</type>
</CustomField>