force-app/main/default/objects/Engagement__c/fields/Escrow_Fee__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Fee__c</fullName>
    <label>Escrow Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>