force-app/main/default/objects/Engagement__c/fields/Est_Transaction_Size_MM__c.field-meta.xml
<CustomField>
    <fullName>Est_Transaction_Size_MM__c</fullName>
    <inlineHelpText>If Engagement involves a majority stake in a Public Company, insert Market Cap as of Engagement Letter date.</inlineHelpText>
    <label>Est. Transaction Size / Market Cap (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>