force-app/main/default/objects/Engagement__c/fields/Estimated_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Signing_Date__c</fullName>
    <description>This field is currently being used in three validation rules, specific to record types and stages.</description>
    <label>Estimated Signing Date</label>
    <type>Date</type>
</CustomField>