force-app/main/default/objects/Engagement__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>Exchange_Rate__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>