force-app/main/default/objects/Engagement__c/fields/Exclude_From_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Reversal</label>
    <type>Checkbox</type>
</CustomField>