force-app/main/default/objects/Engagement__c/fields/Exclusion_Comment__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Comment__c</fullName>
    <inlineHelpText>Please provide a reason for exclusion from reversal.</inlineHelpText>
    <label>Exclusion Comment</label>
    <type>TextArea</type>
</CustomField>