force-app/main/default/objects/Engagement__c/fields/Expense_Cap__c.field-meta.xml
<CustomField>
    <fullName>Expense_Cap__c</fullName>
    <label>Expense Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>