force-app/main/default/objects/Engagement__c/fields/External_Deal_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Deal_Announcement_Date__c</fullName>
    <label>External Deal Announcement Date</label>
    <type>Date</type>
</CustomField>