force-app/main/default/objects/Engagement__c/fields/External_Disclosure_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Disclosure_Status__c</fullName>
    <label>External Disclosure Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Disclose</fullName>
            </value>
            <value>
                <fullName>Consult Deal Team</fullName>
            </value>
            <value>
                <fullName>Disclose Client Name Only</fullName>
            </value>
            <value>
                <fullName>Disclose Client and Deal Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>