force-app/main/default/objects/Engagement__c/fields/Fairness_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Fee__c</fullName>
    <label>Fairness Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>