force-app/main/default/objects/Engagement__c/fields/Fairness_or_Terms__c.field-meta.xml
<CustomField>
    <fullName>Fairness_or_Terms__c</fullName>
    <label>Fairness or Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>