force-app/main/default/objects/Engagement__c/fields/Fee_Structure_Description__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure_Description__c</fullName>
    <label>Fee Structure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>