force-app/main/default/objects/Engagement__c/fields/Fin_Bank_Debt__c.field-meta.xml
<CustomField>
    <fullName>Fin_Bank_Debt__c</fullName>
    <label>Fin Bank Debt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>