force-app/main/default/objects/Engagement__c/fields/Final_Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Bid_Due_Date__c</fullName>
    <label>Final Bid Due Date</label>
    <type>Date</type>
</CustomField>