force-app/main/default/objects/Engagement__c/fields/Final_Bill_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Bill_Sent__c</fullName>
    <label>Final Bill Sent</label>
    <type>Date</type>
</CustomField>