force-app/main/default/objects/Engagement__c/fields/Final_Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Sent_Date__c</fullName>
    <label>Final Report Sent Date</label>
    <type>Date</type>
</CustomField>