force-app/main/default/objects/Engagement__c/fields/Financial_Closing_EBITDA_FYE__c.field-meta.xml
<CustomField>
    <fullName>Financial_Closing_EBITDA_FYE__c</fullName>
    <description>Calculated</description>
    <label>Financial Closing EBITDA FYE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>