force-app/main/default/objects/Engagement__c/fields/Financial_Final_EBITDA_FYE_1__c.field-meta.xml
<CustomField>
    <fullName>Financial_Final_EBITDA_FYE_1__c</fullName>
    <description>Auto-populated from Financials</description>
    <label>Financial Final EBITDA FYE 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>