force-app/main/default/objects/Engagement__c/fields/Financing_Description__c.field-meta.xml
<CustomField>
    <fullName>Financing_Description__c</fullName>
    <label>Financing Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>