force-app/main/default/objects/Engagement__c/fields/Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>Financing_Type__c</fullName>
    <label>Financing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Credit Facility</fullName>
            </value>
            <value>
                <fullName>DIP</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Exit Facility</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>New Equity Financing</fullName>
            </value>
            <value>
                <fullName>Refinancing</fullName>
            </value>
            <value>
                <fullName>Revolver</fullName>
            </value>
            <value>
                <fullName>Rollover Debt</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>