force-app/main/default/objects/Engagement__c/fields/First_Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bid_Due_Date__c</fullName>
    <label>First Bid Due Date</label>
    <type>Date</type>
</CustomField>