force-app/main/default/objects/Engagement__c/fields/Form_of_Opinion_Other__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Opinion_Other__c</fullName>
    <label>Form of Opinion (Other)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>