force-app/main/default/objects/Engagement__c/fields/FR_Client__c.field-meta.xml
<CustomField>
    <fullName>FR_Client__c</fullName>
    <inlineHelpText>Example: Company, First Lien Creditors, Unsecured Creditor Committee, Ad Hoc Group of Senior Unsecured Creditors, etc.</inlineHelpText>
    <label>Client Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>