force-app/main/default/objects/Engagement__c/fields/FR_Engagement_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>FR_Engagement_Summary_Report__c</fullName>
    <formula>$Setup.HL_General__c.Cognos_Protocol__c + $Setup.HL_General__c.Cognos_Domain__c + &apos;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22iE976C7C5016446C38F4F4754316C30D3%22%29&amp;ui.action=run&amp;cv.header=true&amp;cv.toolbar=true&amp;ui_appbar=true&amp;p_p_EngagementId=&apos; + CASESAFEID(Id)</formula>
    <label>FR Engagement Summary Report</label>
    <type>Text</type>
</CustomField>