force-app/main/default/objects/Engagement__c/fields/FR_Intro_Responded__c.field-meta.xml
<CustomField>
    <fullName>FR_Intro_Responded__c</fullName>
    <label>FR Intro Responded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>