force-app/main/default/objects/Engagement__c/fields/FR_Intro_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>FR_Intro_Response_Date__c</fullName>
    <description>The date the FR intro received a response.</description>
    <inlineHelpText>Automatically updated when Legal Entity = HL Capital, Inc.</inlineHelpText>
    <label>FR Intro Response Date</label>
    <type>Date</type>
</CustomField>